--- a/style.css
+++ b/style.css
@@ -149,3 +149,49 @@ h4{margin: 0;}
 
    
 }
+.navbar{
+  
+   
+   background: rgb(83, 81, 81);
+   border:3px solid darkgoldenrod;
+   border-radius: 50px;
+   margin-bottom: 12px;
+}
+.navlist li{
+   box-sizing: border-box;
+   
+   font-family:inherit;
+   font-style: italic;
+   font-weight: 500;
+   color:aliceblue;
+   padding: 2 0;
+   flex:1;
+   text-align: center;
+   display:block;
+   
+}
+.navlist {
+   box-sizing: border-box;
+   
+   border-radius: 50px;
+   
+   padding-left: 0px;
+  
+   margin:0;
+   display:flex;
+   
+   
+}
+.navlist li:nth-of-type(3){
+   flex:2;
+
+}
+
+
+.navlist li:hover{
+   border-radius:inherit;
+   cursor:pointer;
+  
+   background:orange;
+}
+
